TPs/11ªAula/s-exp++/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> LIns
Rule 2     LIns -> LIns Ins
Rule 3     LIns -> Ins
Rule 4     Ins -> ( READ Var )
Rule 5     Ins -> ( = Var Exp )
Rule 6     Ins -> ( IF ( Comp ) Bloco Bloco )
Rule 7     Ins -> ( WRITE Var )
Rule 8     Ins -> ( WHILE ( Comp ) Bloco )
Rule 9     Bloco -> Ins
Rule 10    Bloco -> ( LIns )
Rule 11    Exp -> - Exp Term
Rule 12    Exp -> + Exp Term
Rule 13    Exp -> Term
Rule 14    Term -> * Term Fator
Rule 15    Term -> / Term Fator
Rule 16    Term -> Fator
Rule 17    Fator -> INT
Rule 18    Fator -> ( Exp )
Rule 19    Fator -> Var
Rule 20    Var -> VAR
Rule 21    Comp -> > Exp Exp
Rule 22    Comp -> < Exp Exp

Terminals, with rules where they appear

(                    : 4 5 6 6 7 8 8 10 18
)                    : 4 5 6 6 7 8 8 10 18
*                    : 14
+                    : 12
-                    : 11
/                    : 15
<                    : 22
=                    : 5
>                    : 21
IF                   : 6
INT                  : 17
READ                 : 4
VAR                  : 20
WHILE                : 8
WRITE                : 7
error                : 

Nonterminals, with rules where they appear

Bloco                : 6 6 8
Comp                 : 6 8
Exp                  : 5 11 12 18 21 21 22 22
Fator                : 14 15 16
Ins                  : 2 3 9
LIns                 : 1 2 10
Program              : 0
Term                 : 11 12 13 14 15
Var                  : 4 5 7 19

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . LIns
    (2) LIns -> . LIns Ins
    (3) LIns -> . Ins
    (4) Ins -> . ( READ Var )
    (5) Ins -> . ( = Var Exp )
    (6) Ins -> . ( IF ( Comp ) Bloco Bloco )
    (7) Ins -> . ( WRITE Var )
    (8) Ins -> . ( WHILE ( Comp ) Bloco )

    (               shift and go to state 4

    Program                        shift and go to state 1
    LIns                           shift and go to state 2
    Ins                            shift and go to state 3

state 1

    (0) S' -> Program .



state 2

    (1) Program -> LIns .
    (2) LIns -> LIns . Ins
    (4) Ins -> . ( READ Var )
    (5) Ins -> . ( = Var Exp )
    (6) Ins -> . ( IF ( Comp ) Bloco Bloco )
    (7) Ins -> . ( WRITE Var )
    (8) Ins -> . ( WHILE ( Comp ) Bloco )

    $end            reduce using rule 1 (Program -> LIns .)
    (               shift and go to state 4

    Ins                            shift and go to state 5

state 3

    (3) LIns -> Ins .

    (               reduce using rule 3 (LIns -> Ins .)
    $end            reduce using rule 3 (LIns -> Ins .)
    )               reduce using rule 3 (LIns -> Ins .)


state 4

    (4) Ins -> ( . READ Var )
    (5) Ins -> ( . = Var Exp )
    (6) Ins -> ( . IF ( Comp ) Bloco Bloco )
    (7) Ins -> ( . WRITE Var )
    (8) Ins -> ( . WHILE ( Comp ) Bloco )

    READ            shift and go to state 6
    =               shift and go to state 7
    IF              shift and go to state 8
    WRITE           shift and go to state 9
    WHILE           shift and go to state 10


state 5

    (2) LIns -> LIns Ins .

    (               reduce using rule 2 (LIns -> LIns Ins .)
    $end            reduce using rule 2 (LIns -> LIns Ins .)
    )               reduce using rule 2 (LIns -> LIns Ins .)


state 6

    (4) Ins -> ( READ . Var )
    (20) Var -> . VAR

    VAR             shift and go to state 12

    Var                            shift and go to state 11

state 7

    (5) Ins -> ( = . Var Exp )
    (20) Var -> . VAR

    VAR             shift and go to state 12

    Var                            shift and go to state 13

state 8

    (6) Ins -> ( IF . ( Comp ) Bloco Bloco )

    (               shift and go to state 14


state 9

    (7) Ins -> ( WRITE . Var )
    (20) Var -> . VAR

    VAR             shift and go to state 12

    Var                            shift and go to state 15

state 10

    (8) Ins -> ( WHILE . ( Comp ) Bloco )

    (               shift and go to state 16


state 11

    (4) Ins -> ( READ Var . )

    )               shift and go to state 17


state 12

    (20) Var -> VAR .

    )               reduce using rule 20 (Var -> VAR .)
    -               reduce using rule 20 (Var -> VAR .)
    +               reduce using rule 20 (Var -> VAR .)
    *               reduce using rule 20 (Var -> VAR .)
    /               reduce using rule 20 (Var -> VAR .)
    INT             reduce using rule 20 (Var -> VAR .)
    (               reduce using rule 20 (Var -> VAR .)
    VAR             reduce using rule 20 (Var -> VAR .)


state 13

    (5) Ins -> ( = Var . Exp )
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Var                            shift and go to state 19
    Exp                            shift and go to state 20
    Term                           shift and go to state 22
    Fator                          shift and go to state 25

state 14

    (6) Ins -> ( IF ( . Comp ) Bloco Bloco )
    (21) Comp -> . > Exp Exp
    (22) Comp -> . < Exp Exp

    >               shift and go to state 29
    <               shift and go to state 30

    Comp                           shift and go to state 28

state 15

    (7) Ins -> ( WRITE Var . )

    )               shift and go to state 31


state 16

    (8) Ins -> ( WHILE ( . Comp ) Bloco )
    (21) Comp -> . > Exp Exp
    (22) Comp -> . < Exp Exp

    >               shift and go to state 29
    <               shift and go to state 30

    Comp                           shift and go to state 32

state 17

    (4) Ins -> ( READ Var ) .

    (               reduce using rule 4 (Ins -> ( READ Var ) .)
    $end            reduce using rule 4 (Ins -> ( READ Var ) .)
    )               reduce using rule 4 (Ins -> ( READ Var ) .)


state 18

    (18) Fator -> ( . Exp )
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Exp                            shift and go to state 33
    Term                           shift and go to state 22
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 19

    (19) Fator -> Var .

    )               reduce using rule 19 (Fator -> Var .)
    *               reduce using rule 19 (Fator -> Var .)
    /               reduce using rule 19 (Fator -> Var .)
    INT             reduce using rule 19 (Fator -> Var .)
    (               reduce using rule 19 (Fator -> Var .)
    VAR             reduce using rule 19 (Fator -> Var .)
    -               reduce using rule 19 (Fator -> Var .)
    +               reduce using rule 19 (Fator -> Var .)


state 20

    (5) Ins -> ( = Var Exp . )

    )               shift and go to state 34


state 21

    (11) Exp -> - . Exp Term
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Exp                            shift and go to state 35
    Term                           shift and go to state 22
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 22

    (13) Exp -> Term .

    )               reduce using rule 13 (Exp -> Term .)
    *               reduce using rule 13 (Exp -> Term .)
    /               reduce using rule 13 (Exp -> Term .)
    INT             reduce using rule 13 (Exp -> Term .)
    (               reduce using rule 13 (Exp -> Term .)
    VAR             reduce using rule 13 (Exp -> Term .)
    -               reduce using rule 13 (Exp -> Term .)
    +               reduce using rule 13 (Exp -> Term .)


state 23

    (12) Exp -> + . Exp Term
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Exp                            shift and go to state 36
    Term                           shift and go to state 22
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 24

    (14) Term -> * . Term Fator
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Term                           shift and go to state 37
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 25

    (16) Term -> Fator .

    )               reduce using rule 16 (Term -> Fator .)
    *               reduce using rule 16 (Term -> Fator .)
    /               reduce using rule 16 (Term -> Fator .)
    INT             reduce using rule 16 (Term -> Fator .)
    (               reduce using rule 16 (Term -> Fator .)
    VAR             reduce using rule 16 (Term -> Fator .)
    -               reduce using rule 16 (Term -> Fator .)
    +               reduce using rule 16 (Term -> Fator .)


state 26

    (15) Term -> / . Term Fator
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Term                           shift and go to state 38
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 27

    (17) Fator -> INT .

    )               reduce using rule 17 (Fator -> INT .)
    *               reduce using rule 17 (Fator -> INT .)
    /               reduce using rule 17 (Fator -> INT .)
    INT             reduce using rule 17 (Fator -> INT .)
    (               reduce using rule 17 (Fator -> INT .)
    VAR             reduce using rule 17 (Fator -> INT .)
    -               reduce using rule 17 (Fator -> INT .)
    +               reduce using rule 17 (Fator -> INT .)


state 28

    (6) Ins -> ( IF ( Comp . ) Bloco Bloco )

    )               shift and go to state 39


state 29

    (21) Comp -> > . Exp Exp
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Exp                            shift and go to state 40
    Term                           shift and go to state 22
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 30

    (22) Comp -> < . Exp Exp
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Exp                            shift and go to state 41
    Term                           shift and go to state 22
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 31

    (7) Ins -> ( WRITE Var ) .

    (               reduce using rule 7 (Ins -> ( WRITE Var ) .)
    $end            reduce using rule 7 (Ins -> ( WRITE Var ) .)
    )               reduce using rule 7 (Ins -> ( WRITE Var ) .)


state 32

    (8) Ins -> ( WHILE ( Comp . ) Bloco )

    )               shift and go to state 42


state 33

    (18) Fator -> ( Exp . )

    )               shift and go to state 43


state 34

    (5) Ins -> ( = Var Exp ) .

    (               reduce using rule 5 (Ins -> ( = Var Exp ) .)
    $end            reduce using rule 5 (Ins -> ( = Var Exp ) .)
    )               reduce using rule 5 (Ins -> ( = Var Exp ) .)


state 35

    (11) Exp -> - Exp . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Term                           shift and go to state 44
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 36

    (12) Exp -> + Exp . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Term                           shift and go to state 45
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 37

    (14) Term -> * Term . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Fator                          shift and go to state 46
    Var                            shift and go to state 19

state 38

    (15) Term -> / Term . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Fator                          shift and go to state 47
    Var                            shift and go to state 19

state 39

    (6) Ins -> ( IF ( Comp ) . Bloco Bloco )
    (9) Bloco -> . Ins
    (10) Bloco -> . ( LIns )
    (4) Ins -> . ( READ Var )
    (5) Ins -> . ( = Var Exp )
    (6) Ins -> . ( IF ( Comp ) Bloco Bloco )
    (7) Ins -> . ( WRITE Var )
    (8) Ins -> . ( WHILE ( Comp ) Bloco )

    (               shift and go to state 48

    Bloco                          shift and go to state 49
    Ins                            shift and go to state 50

state 40

    (21) Comp -> > Exp . Exp
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Exp                            shift and go to state 51
    Term                           shift and go to state 22
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 41

    (22) Comp -> < Exp . Exp
    (11) Exp -> . - Exp Term
    (12) Exp -> . + Exp Term
    (13) Exp -> . Term
    (14) Term -> . * Term Fator
    (15) Term -> . / Term Fator
    (16) Term -> . Fator
    (17) Fator -> . INT
    (18) Fator -> . ( Exp )
    (19) Fator -> . Var
    (20) Var -> . VAR

    -               shift and go to state 21
    +               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 26
    INT             shift and go to state 27
    (               shift and go to state 18
    VAR             shift and go to state 12

    Exp                            shift and go to state 52
    Term                           shift and go to state 22
    Fator                          shift and go to state 25
    Var                            shift and go to state 19

state 42

    (8) Ins -> ( WHILE ( Comp ) . Bloco )
    (9) Bloco -> . Ins
    (10) Bloco -> . ( LIns )
    (4) Ins -> . ( READ Var )
    (5) Ins -> . ( = Var Exp )
    (6) Ins -> . ( IF ( Comp ) Bloco Bloco )
    (7) Ins -> . ( WRITE Var )
    (8) Ins -> . ( WHILE ( Comp ) Bloco )

    (               shift and go to state 48

    Bloco                          shift and go to state 53
    Ins                            shift and go to state 50

state 43

    (18) Fator -> ( Exp ) .

    )               reduce using rule 18 (Fator -> ( Exp ) .)
    *               reduce using rule 18 (Fator -> ( Exp ) .)
    /               reduce using rule 18 (Fator -> ( Exp ) .)
    INT             reduce using rule 18 (Fator -> ( Exp ) .)
    (               reduce using rule 18 (Fator -> ( Exp ) .)
    VAR             reduce using rule 18 (Fator -> ( Exp ) .)
    -               reduce using rule 18 (Fator -> ( Exp ) .)
    +               reduce using rule 18 (Fator -> ( Exp ) .)


state 44

    (11) Exp -> - Exp Term .

    )               reduce using rule 11 (Exp -> - Exp Term .)
    *               reduce using rule 11 (Exp -> - Exp Term .)
    /               reduce using rule 11 (Exp -> - Exp Term .)
    INT             reduce using rule 11 (Exp -> - Exp Term .)
    (               reduce using rule 11 (Exp -> - Exp Term .)
    VAR             reduce using rule 11 (Exp -> - Exp Term .)
    -               reduce using rule 11 (Exp -> - Exp Term .)
    +               reduce using rule 11 (Exp -> - Exp Term .)


state 45

    (12) Exp -> + Exp Term .

    )               reduce using rule 12 (Exp -> + Exp Term .)
    *               reduce using rule 12 (Exp -> + Exp Term .)
    /               reduce using rule 12 (Exp -> + Exp Term .)
    INT             reduce using rule 12 (Exp -> + Exp Term .)
    (               reduce using rule 12 (Exp -> + Exp Term .)
    VAR             reduce using rule 12 (Exp -> + Exp Term .)
    -               reduce using rule 12 (Exp -> + Exp Term .)
    +               reduce using rule 12 (Exp -> + Exp Term .)


state 46

    (14) Term -> * Term Fator .

    )               reduce using rule 14 (Term -> * Term Fator .)
    *               reduce using rule 14 (Term -> * Term Fator .)
    /               reduce using rule 14 (Term -> * Term Fator .)
    INT             reduce using rule 14 (Term -> * Term Fator .)
    (               reduce using rule 14 (Term -> * Term Fator .)
    VAR             reduce using rule 14 (Term -> * Term Fator .)
    -               reduce using rule 14 (Term -> * Term Fator .)
    +               reduce using rule 14 (Term -> * Term Fator .)


state 47

    (15) Term -> / Term Fator .

    )               reduce using rule 15 (Term -> / Term Fator .)
    *               reduce using rule 15 (Term -> / Term Fator .)
    /               reduce using rule 15 (Term -> / Term Fator .)
    INT             reduce using rule 15 (Term -> / Term Fator .)
    (               reduce using rule 15 (Term -> / Term Fator .)
    VAR             reduce using rule 15 (Term -> / Term Fator .)
    -               reduce using rule 15 (Term -> / Term Fator .)
    +               reduce using rule 15 (Term -> / Term Fator .)


state 48

    (10) Bloco -> ( . LIns )
    (4) Ins -> ( . READ Var )
    (5) Ins -> ( . = Var Exp )
    (6) Ins -> ( . IF ( Comp ) Bloco Bloco )
    (7) Ins -> ( . WRITE Var )
    (8) Ins -> ( . WHILE ( Comp ) Bloco )
    (2) LIns -> . LIns Ins
    (3) LIns -> . Ins
    (4) Ins -> . ( READ Var )
    (5) Ins -> . ( = Var Exp )
    (6) Ins -> . ( IF ( Comp ) Bloco Bloco )
    (7) Ins -> . ( WRITE Var )
    (8) Ins -> . ( WHILE ( Comp ) Bloco )

    READ            shift and go to state 6
    =               shift and go to state 7
    IF              shift and go to state 8
    WRITE           shift and go to state 9
    WHILE           shift and go to state 10
    (               shift and go to state 4

    LIns                           shift and go to state 54
    Ins                            shift and go to state 3

state 49

    (6) Ins -> ( IF ( Comp ) Bloco . Bloco )
    (9) Bloco -> . Ins
    (10) Bloco -> . ( LIns )
    (4) Ins -> . ( READ Var )
    (5) Ins -> . ( = Var Exp )
    (6) Ins -> . ( IF ( Comp ) Bloco Bloco )
    (7) Ins -> . ( WRITE Var )
    (8) Ins -> . ( WHILE ( Comp ) Bloco )

    (               shift and go to state 48

    Bloco                          shift and go to state 55
    Ins                            shift and go to state 50

state 50

    (9) Bloco -> Ins .

    (               reduce using rule 9 (Bloco -> Ins .)
    )               reduce using rule 9 (Bloco -> Ins .)


state 51

    (21) Comp -> > Exp Exp .

    )               reduce using rule 21 (Comp -> > Exp Exp .)


state 52

    (22) Comp -> < Exp Exp .

    )               reduce using rule 22 (Comp -> < Exp Exp .)


state 53

    (8) Ins -> ( WHILE ( Comp ) Bloco . )

    )               shift and go to state 56


state 54

    (10) Bloco -> ( LIns . )
    (2) LIns -> LIns . Ins
    (4) Ins -> . ( READ Var )
    (5) Ins -> . ( = Var Exp )
    (6) Ins -> . ( IF ( Comp ) Bloco Bloco )
    (7) Ins -> . ( WRITE Var )
    (8) Ins -> . ( WHILE ( Comp ) Bloco )

    )               shift and go to state 57
    (               shift and go to state 4

    Ins                            shift and go to state 5

state 55

    (6) Ins -> ( IF ( Comp ) Bloco Bloco . )

    )               shift and go to state 58


state 56

    (8) Ins -> ( WHILE ( Comp ) Bloco ) .

    (               reduce using rule 8 (Ins -> ( WHILE ( Comp ) Bloco ) .)
    $end            reduce using rule 8 (Ins -> ( WHILE ( Comp ) Bloco ) .)
    )               reduce using rule 8 (Ins -> ( WHILE ( Comp ) Bloco ) .)


state 57

    (10) Bloco -> ( LIns ) .

    (               reduce using rule 10 (Bloco -> ( LIns ) .)
    )               reduce using rule 10 (Bloco -> ( LIns ) .)


state 58

    (6) Ins -> ( IF ( Comp ) Bloco Bloco ) .

    (               reduce using rule 6 (Ins -> ( IF ( Comp ) Bloco Bloco ) .)
    $end            reduce using rule 6 (Ins -> ( IF ( Comp ) Bloco Bloco ) .)
    )               reduce using rule 6 (Ins -> ( IF ( Comp ) Bloco Bloco ) .)

